// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectSavedSearches renders 1`] = `
<ProjectSavedSearches
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
>
  <SideEffect(DocumentTitle)
    title="Saved Searches - Sentry"
  >
    <DocumentTitle
      title="Saved Searches - Sentry"
    >
      <div>
        <SettingsPageHeading
          title="Saved Searches"
        >
          <Wrapper>
            <div
              className="css-1pnrn3o-Wrapper e1kblvez1"
            >
              <Flex
                align="center"
              >
                <Base
                  align="center"
                  className="css-5ipae5"
                >
                  <div
                    className="css-5ipae5"
                    is={null}
                  >
                    <Title>
                      <Base
                        className="css-1mqcea-Title e1kblvez0"
                      >
                        <div
                          className="css-1mqcea-Title e1kblvez0"
                          is={null}
                        >
                          Saved Searches
                        </div>
                      </Base>
                    </Title>
                  </div>
                </Base>
              </Flex>
            </div>
          </Wrapper>
        </SettingsPageHeading>
        <Panel>
          <Component
            className="css-10qfvek-Panel e1laxa7d0"
          >
            <div
              className="css-10qfvek-Panel e1laxa7d0"
            >
              <PanelHeader
                disablePadding={true}
              >
                <Component
                  className="css-1su43hb-PanelHeader-getPadding e1p8v8nv0"
                  disablePadding={true}
                >
                  <Flex
                    align="center"
                    className="css-1su43hb-PanelHeader-getPadding e1p8v8nv0"
                    justify="space-between"
                  >
                    <Base
                      align="center"
                      className="e1p8v8nv0 css-1m84sz9-PanelHeader-getPadding"
                      justify="space-between"
                    >
                      <div
                        className="e1p8v8nv0 css-1m84sz9-PanelHeader-getPadding"
                        is={null}
                      >
                        <Flex
                          flex="1"
                        >
                          <Base
                            className="css-z8nhq7"
                            flex="1"
                          >
                            <div
                              className="css-z8nhq7"
                              is={null}
                            >
                              <Flex
                                flex="1"
                                px={2}
                              >
                                <Base
                                  className="css-1i4q2rt"
                                  flex="1"
                                  px={2}
                                >
                                  <div
                                    className="css-1i4q2rt"
                                    is={null}
                                  >
                                    Search
                                  </div>
                                </Base>
                              </Flex>
                              <Flex
                                flex="1"
                              >
                                <Base
                                  className="css-z8nhq7"
                                  flex="1"
                                >
                                  <div
                                    className="css-z8nhq7"
                                    is={null}
                                  >
                                    <InputColumn>
                                      <Flex
                                        flex="1"
                                        justify="center"
                                      >
                                        <Base
                                          className="css-k3hlac"
                                          flex="1"
                                          justify="center"
                                        >
                                          <div
                                            className="css-k3hlac"
                                            is={null}
                                          >
                                            My Default
                                          </div>
                                        </Base>
                                      </Flex>
                                    </InputColumn>
                                    <InputColumn>
                                      <Flex
                                        flex="1"
                                        justify="center"
                                      >
                                        <Base
                                          className="css-k3hlac"
                                          flex="1"
                                          justify="center"
                                        >
                                          <div
                                            className="css-k3hlac"
                                            is={null}
                                          >
                                            Team Default
                                          </div>
                                        </Base>
                                      </Flex>
                                    </InputColumn>
                                    <InputColumn>
                                      <Flex
                                        flex="1"
                                        justify="center"
                                      >
                                        <Base
                                          className="css-k3hlac"
                                          flex="1"
                                          justify="center"
                                        >
                                          <div
                                            className="css-k3hlac"
                                            is={null}
                                          >
                                            Remove
                                          </div>
                                        </Base>
                                      </Flex>
                                    </InputColumn>
                                  </div>
                                </Base>
                              </Flex>
                            </div>
                          </Base>
                        </Flex>
                      </div>
                    </Base>
                  </Flex>
                </Component>
              </PanelHeader>
              <PanelBody
                direction="column"
                disablePadding={true}
                flex={false}
              >
                <div
                  className="css-9vq8an-textStyles"
                >
                  <SavedSearchRow
                    access={
                      Set {
                        "org:read",
                        "org:write",
                        "org:admin",
                        "project:read",
                        "project:write",
                        "project:admin",
                        "team:read",
                        "team:write",
                        "team:admin",
                      }
                    }
                    canModify={true}
                    data={
                      Object {
                        "dateCreated": "2017-11-14T02:22:58.026Z",
                        "id": "2",
                        "isDefault": true,
                        "isPrivate": false,
                        "isUserDefault": false,
                        "name": "Needs Triage",
                        "query": "is:unresolved is:unassigned",
                      }
                    }
                    key="2"
                    onDefault={[Function]}
                    onRemove={[Function]}
                    onUserDefault={[Function]}
                    orgId="org-slug"
                    projectId="project-slug"
                  >
                    <PanelItem
                      align="center"
                      p={0}
                      py={2}
                    >
                      <Base
                        align="center"
                        className="css-16d6l3f-PanelItem eo8n7lk0"
                        p={0}
                        py={2}
                      >
                        <div
                          className="css-16d6l3f-PanelItem eo8n7lk0"
                          is={null}
                        >
                          <Flex
                            direction="column"
                            flex="1"
                            px={2}
                          >
                            <Base
                              className="css-16auc1r"
                              direction="column"
                              flex="1"
                              px={2}
                            >
                              <div
                                className="css-16auc1r"
                                is={null}
                              >
                                <SearchTitle>
                                  <div
                                    className="css-225nrx-SearchTitle e1e9fsi50"
                                  >
                                    Needs Triage
                                  </div>
                                </SearchTitle>
                                <code>
                                  is:unresolved is:unassigned
                                </code>
                              </div>
                            </Base>
                          </Flex>
                          <Flex
                            flex="1"
                          >
                            <Base
                              className="css-z8nhq7"
                              flex="1"
                            >
                              <div
                                className="css-z8nhq7"
                                is={null}
                              >
                                <InputColumn>
                                  <Flex
                                    flex="1"
                                    justify="center"
                                  >
                                    <Base
                                      className="css-k3hlac"
                                      flex="1"
                                      justify="center"
                                    >
                                      <div
                                        className="css-k3hlac"
                                        is={null}
                                      >
                                        <input
                                          checked={false}
                                          name="userDefault"
                                          onChange={[Function]}
                                          type="radio"
                                        />
                                      </div>
                                    </Base>
                                  </Flex>
                                </InputColumn>
                                <InputColumn>
                                  <Flex
                                    flex="1"
                                    justify="center"
                                  >
                                    <Base
                                      className="css-k3hlac"
                                      flex="1"
                                      justify="center"
                                    >
                                      <div
                                        className="css-k3hlac"
                                        is={null}
                                      >
                                        <input
                                          checked={true}
                                          name="default"
                                          onChange={[Function]}
                                          type="radio"
                                        />
                                      </div>
                                    </Base>
                                  </Flex>
                                </InputColumn>
                                <InputColumn>
                                  <Flex
                                    flex="1"
                                    justify="center"
                                  >
                                    <Base
                                      className="css-k3hlac"
                                      flex="1"
                                      justify="center"
                                    >
                                      <div
                                        className="css-k3hlac"
                                        is={null}
                                      >
                                        <Confirm
                                          cancelText="Cancel"
                                          confirmText="Confirm"
                                          disableConfirmButton={false}
                                          message="Are you sure you want to remove this?"
                                          onConfirm={[Function]}
                                          priority="primary"
                                        >
                                          <Button
                                            disabled={false}
                                            icon="icon-trash"
                                            onClick={[Function]}
                                            size="small"
                                          >
                                            <StyledButton
                                              disabled={false}
                                              onClick={[Function]}
                                              role="button"
                                              size="small"
                                            >
                                              <Component
                                                className="css-dkprmi-StyledButton-getColors e17811v30"
                                                disabled={false}
                                                onClick={[Function]}
                                                role="button"
                                                size="small"
                                              >
                                                <button
                                                  className="css-dkprmi-StyledButton-getColors e17811v30"
                                                  disabled={false}
                                                  onClick={[Function]}
                                                  role="button"
                                                  size="small"
                                                >
                                                  <ButtonLabel
                                                    size="small"
                                                  >
                                                    <Component
                                                      className="css-19bmqb3-ButtonLabel e17811v31"
                                                      size="small"
                                                    >
                                                      <Flex
                                                        align="center"
                                                        className="css-19bmqb3-ButtonLabel e17811v31"
                                                        size="small"
                                                      >
                                                        <Base
                                                          align="center"
                                                          className="e17811v31 css-1eblpyp-ButtonLabel"
                                                          size="small"
                                                        >
                                                          <div
                                                            className="e17811v31 css-1eblpyp-ButtonLabel"
                                                            is={null}
                                                            size="small"
                                                          >
                                                            <Icon
                                                              hasChildren={false}
                                                              size="small"
                                                            >
                                                              <Component
                                                                className="css-ljhpxy-Icon e17811v32"
                                                                hasChildren={false}
                                                                size="small"
                                                              >
                                                                <Box
                                                                  className="css-ljhpxy-Icon e17811v32"
                                                                  size="small"
                                                                >
                                                                  <Base
                                                                    className="e17811v32 css-7mohvl-Icon"
                                                                    size="small"
                                                                  >
                                                                    <div
                                                                      className="e17811v32 css-7mohvl-Icon"
                                                                      is={null}
                                                                      size="small"
                                                                    >
                                                                      <StyledInlineSvg
                                                                        size="12px"
                                                                        src="icon-trash"
                                                                      >
                                                                        <InlineSvg
                                                                          className="css-1ov3rcq-StyledInlineSvg e17811v33"
                                                                          size="12px"
                                                                          src="icon-trash"
                                                                        >
                                                                          <StyledSvg
                                                                            className="css-1ov3rcq-StyledInlineSvg e17811v33"
                                                                            height="12px"
                                                                            viewBox={Object {}}
                                                                            width="12px"
                                                                          >
                                                                            <svg
                                                                              className="e17811v33 css-1jjmnki-StyledSvg-StyledInlineSvg e2idor0"
                                                                              height="12px"
                                                                              viewBox={Object {}}
                                                                              width="12px"
                                                                            >
                                                                              <use
                                                                                href="#test"
                                                                                xlinkHref="#test"
                                                                              />
                                                                            </svg>
                                                                          </StyledSvg>
                                                                        </InlineSvg>
                                                                      </StyledInlineSvg>
                                                                    </div>
                                                                  </Base>
                                                                </Box>
                                                              </Component>
                                                            </Icon>
                                                          </div>
                                                        </Base>
                                                      </Flex>
                                                    </Component>
                                                  </ButtonLabel>
                                                </button>
                                              </Component>
                                            </StyledButton>
                                          </Button>
                                          <Modal
                                            animation={false}
                                            autoFocus={true}
                                            backdrop={true}
                                            bsClass="modal"
                                            dialogComponentClass={[Function]}
                                            enforceFocus={true}
                                            keyboard={true}
                                            manager={
                                              ModalManager {
                                                "add": [Function],
                                                "containers": Array [],
                                                "data": Array [],
                                                "handleContainerOverflow": true,
                                                "hideSiblingNodes": true,
                                                "isTopModal": [Function],
                                                "modals": Array [],
                                                "remove": [Function],
                                              }
                                            }
                                            onHide={[Function]}
                                            renderBackdrop={[Function]}
                                            restoreFocus={true}
                                            show={false}
                                          >
                                            <Modal
                                              autoFocus={true}
                                              backdrop={true}
                                              backdropClassName="modal-backdrop"
                                              containerClassName="modal-open"
                                              enforceFocus={true}
                                              keyboard={true}
                                              manager={
                                                ModalManager {
                                                  "add": [Function],
                                                  "containers": Array [],
                                                  "data": Array [],
                                                  "handleContainerOverflow": true,
                                                  "hideSiblingNodes": true,
                                                  "isTopModal": [Function],
                                                  "modals": Array [],
                                                  "remove": [Function],
                                                }
                                              }
                                              onEntering={[Function]}
                                              onExited={[Function]}
                                              onHide={[Function]}
                                              renderBackdrop={[Function]}
                                              restoreFocus={true}
                                              show={false}
                                            />
                                          </Modal>
                                        </Confirm>
                                      </div>
                                    </Base>
                                  </Flex>
                                </InputColumn>
                              </div>
                            </Base>
                          </Flex>
                        </div>
                      </Base>
                    </PanelItem>
                  </SavedSearchRow>
                  <SavedSearchRow
                    access={
                      Set {
                        "org:read",
                        "org:write",
                        "org:admin",
                        "project:read",
                        "project:write",
                        "project:admin",
                        "team:read",
                        "team:write",
                        "team:admin",
                      }
                    }
                    canModify={true}
                    data={
                      Object {
                        "dateCreated": "2017-11-14T02:22:58.022Z",
                        "id": "1",
                        "isDefault": false,
                        "isPrivate": false,
                        "isUserDefault": true,
                        "name": "Unresolved Issues",
                        "query": "is:unresolved",
                      }
                    }
                    key="1"
                    onDefault={[Function]}
                    onRemove={[Function]}
                    onUserDefault={[Function]}
                    orgId="org-slug"
                    projectId="project-slug"
                  >
                    <PanelItem
                      align="center"
                      p={0}
                      py={2}
                    >
                      <Base
                        align="center"
                        className="css-16d6l3f-PanelItem eo8n7lk0"
                        p={0}
                        py={2}
                      >
                        <div
                          className="css-16d6l3f-PanelItem eo8n7lk0"
                          is={null}
                        >
                          <Flex
                            direction="column"
                            flex="1"
                            px={2}
                          >
                            <Base
                              className="css-16auc1r"
                              direction="column"
                              flex="1"
                              px={2}
                            >
                              <div
                                className="css-16auc1r"
                                is={null}
                              >
                                <SearchTitle>
                                  <div
                                    className="css-225nrx-SearchTitle e1e9fsi50"
                                  >
                                    Unresolved Issues
                                  </div>
                                </SearchTitle>
                                <code>
                                  is:unresolved
                                </code>
                              </div>
                            </Base>
                          </Flex>
                          <Flex
                            flex="1"
                          >
                            <Base
                              className="css-z8nhq7"
                              flex="1"
                            >
                              <div
                                className="css-z8nhq7"
                                is={null}
                              >
                                <InputColumn>
                                  <Flex
                                    flex="1"
                                    justify="center"
                                  >
                                    <Base
                                      className="css-k3hlac"
                                      flex="1"
                                      justify="center"
                                    >
                                      <div
                                        className="css-k3hlac"
                                        is={null}
                                      >
                                        <input
                                          checked={true}
                                          name="userDefault"
                                          onChange={[Function]}
                                          type="radio"
                                        />
                                      </div>
                                    </Base>
                                  </Flex>
                                </InputColumn>
                                <InputColumn>
                                  <Flex
                                    flex="1"
                                    justify="center"
                                  >
                                    <Base
                                      className="css-k3hlac"
                                      flex="1"
                                      justify="center"
                                    >
                                      <div
                                        className="css-k3hlac"
                                        is={null}
                                      >
                                        <input
                                          checked={false}
                                          name="default"
                                          onChange={[Function]}
                                          type="radio"
                                        />
                                      </div>
                                    </Base>
                                  </Flex>
                                </InputColumn>
                                <InputColumn>
                                  <Flex
                                    flex="1"
                                    justify="center"
                                  >
                                    <Base
                                      className="css-k3hlac"
                                      flex="1"
                                      justify="center"
                                    >
                                      <div
                                        className="css-k3hlac"
                                        is={null}
                                      >
                                        <Confirm
                                          cancelText="Cancel"
                                          confirmText="Confirm"
                                          disableConfirmButton={false}
                                          message="Are you sure you want to remove this?"
                                          onConfirm={[Function]}
                                          priority="primary"
                                        >
                                          <Button
                                            disabled={false}
                                            icon="icon-trash"
                                            onClick={[Function]}
                                            size="small"
                                          >
                                            <StyledButton
                                              disabled={false}
                                              onClick={[Function]}
                                              role="button"
                                              size="small"
                                            >
                                              <Component
                                                className="css-dkprmi-StyledButton-getColors e17811v30"
                                                disabled={false}
                                                onClick={[Function]}
                                                role="button"
                                                size="small"
                                              >
                                                <button
                                                  className="css-dkprmi-StyledButton-getColors e17811v30"
                                                  disabled={false}
                                                  onClick={[Function]}
                                                  role="button"
                                                  size="small"
                                                >
                                                  <ButtonLabel
                                                    size="small"
                                                  >
                                                    <Component
                                                      className="css-19bmqb3-ButtonLabel e17811v31"
                                                      size="small"
                                                    >
                                                      <Flex
                                                        align="center"
                                                        className="css-19bmqb3-ButtonLabel e17811v31"
                                                        size="small"
                                                      >
                                                        <Base
                                                          align="center"
                                                          className="e17811v31 css-1eblpyp-ButtonLabel"
                                                          size="small"
                                                        >
                                                          <div
                                                            className="e17811v31 css-1eblpyp-ButtonLabel"
                                                            is={null}
                                                            size="small"
                                                          >
                                                            <Icon
                                                              hasChildren={false}
                                                              size="small"
                                                            >
                                                              <Component
                                                                className="css-ljhpxy-Icon e17811v32"
                                                                hasChildren={false}
                                                                size="small"
                                                              >
                                                                <Box
                                                                  className="css-ljhpxy-Icon e17811v32"
                                                                  size="small"
                                                                >
                                                                  <Base
                                                                    className="e17811v32 css-7mohvl-Icon"
                                                                    size="small"
                                                                  >
                                                                    <div
                                                                      className="e17811v32 css-7mohvl-Icon"
                                                                      is={null}
                                                                      size="small"
                                                                    >
                                                                      <StyledInlineSvg
                                                                        size="12px"
                                                                        src="icon-trash"
                                                                      >
                                                                        <InlineSvg
                                                                          className="css-1ov3rcq-StyledInlineSvg e17811v33"
                                                                          size="12px"
                                                                          src="icon-trash"
                                                                        >
                                                                          <StyledSvg
                                                                            className="css-1ov3rcq-StyledInlineSvg e17811v33"
                                                                            height="12px"
                                                                            viewBox={Object {}}
                                                                            width="12px"
                                                                          >
                                                                            <svg
                                                                              className="e17811v33 css-1jjmnki-StyledSvg-StyledInlineSvg e2idor0"
                                                                              height="12px"
                                                                              viewBox={Object {}}
                                                                              width="12px"
                                                                            >
                                                                              <use
                                                                                href="#test"
                                                                                xlinkHref="#test"
                                                                              />
                                                                            </svg>
                                                                          </StyledSvg>
                                                                        </InlineSvg>
                                                                      </StyledInlineSvg>
                                                                    </div>
                                                                  </Base>
                                                                </Box>
                                                              </Component>
                                                            </Icon>
                                                          </div>
                                                        </Base>
                                                      </Flex>
                                                    </Component>
                                                  </ButtonLabel>
                                                </button>
                                              </Component>
                                            </StyledButton>
                                          </Button>
                                          <Modal
                                            animation={false}
                                            autoFocus={true}
                                            backdrop={true}
                                            bsClass="modal"
                                            dialogComponentClass={[Function]}
                                            enforceFocus={true}
                                            keyboard={true}
                                            manager={
                                              ModalManager {
                                                "add": [Function],
                                                "containers": Array [],
                                                "data": Array [],
                                                "handleContainerOverflow": true,
                                                "hideSiblingNodes": true,
                                                "isTopModal": [Function],
                                                "modals": Array [],
                                                "remove": [Function],
                                              }
                                            }
                                            onHide={[Function]}
                                            renderBackdrop={[Function]}
                                            restoreFocus={true}
                                            show={false}
                                          >
                                            <Modal
                                              autoFocus={true}
                                              backdrop={true}
                                              backdropClassName="modal-backdrop"
                                              containerClassName="modal-open"
                                              enforceFocus={true}
                                              keyboard={true}
                                              manager={
                                                ModalManager {
                                                  "add": [Function],
                                                  "containers": Array [],
                                                  "data": Array [],
                                                  "handleContainerOverflow": true,
                                                  "hideSiblingNodes": true,
                                                  "isTopModal": [Function],
                                                  "modals": Array [],
                                                  "remove": [Function],
                                                }
                                              }
                                              onEntering={[Function]}
                                              onExited={[Function]}
                                              onHide={[Function]}
                                              renderBackdrop={[Function]}
                                              restoreFocus={true}
                                              show={false}
                                            />
                                          </Modal>
                                        </Confirm>
                                      </div>
                                    </Base>
                                  </Flex>
                                </InputColumn>
                              </div>
                            </Base>
                          </Flex>
                        </div>
                      </Base>
                    </PanelItem>
                  </SavedSearchRow>
                </div>
              </PanelBody>
            </div>
          </Component>
        </Panel>
      </div>
    </DocumentTitle>
  </SideEffect(DocumentTitle)>
</ProjectSavedSearches>
`;

exports[`ProjectSavedSearches renders empty 1`] = `
<ProjectSavedSearches
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
>
  <SideEffect(DocumentTitle)
    title="Saved Searches - Sentry"
  >
    <DocumentTitle
      title="Saved Searches - Sentry"
    >
      <div>
        <SettingsPageHeading
          title="Saved Searches"
        >
          <Wrapper>
            <div
              className="css-1pnrn3o-Wrapper e1kblvez1"
            >
              <Flex
                align="center"
              >
                <Base
                  align="center"
                  className="css-5ipae5"
                >
                  <div
                    className="css-5ipae5"
                    is={null}
                  >
                    <Title>
                      <Base
                        className="css-1mqcea-Title e1kblvez0"
                      >
                        <div
                          className="css-1mqcea-Title e1kblvez0"
                          is={null}
                        >
                          Saved Searches
                        </div>
                      </Base>
                    </Title>
                  </div>
                </Base>
              </Flex>
            </div>
          </Wrapper>
        </SettingsPageHeading>
        <Panel>
          <Component
            className="css-10qfvek-Panel e1laxa7d0"
          >
            <div
              className="css-10qfvek-Panel e1laxa7d0"
            >
              <PanelHeader
                disablePadding={true}
              >
                <Component
                  className="css-1su43hb-PanelHeader-getPadding e1p8v8nv0"
                  disablePadding={true}
                >
                  <Flex
                    align="center"
                    className="css-1su43hb-PanelHeader-getPadding e1p8v8nv0"
                    justify="space-between"
                  >
                    <Base
                      align="center"
                      className="e1p8v8nv0 css-1m84sz9-PanelHeader-getPadding"
                      justify="space-between"
                    >
                      <div
                        className="e1p8v8nv0 css-1m84sz9-PanelHeader-getPadding"
                        is={null}
                      >
                        <Flex
                          flex="1"
                        >
                          <Base
                            className="css-z8nhq7"
                            flex="1"
                          >
                            <div
                              className="css-z8nhq7"
                              is={null}
                            >
                              <Flex
                                flex="1"
                                px={2}
                              >
                                <Base
                                  className="css-1i4q2rt"
                                  flex="1"
                                  px={2}
                                >
                                  <div
                                    className="css-1i4q2rt"
                                    is={null}
                                  >
                                    Search
                                  </div>
                                </Base>
                              </Flex>
                              <Flex
                                flex="1"
                              >
                                <Base
                                  className="css-z8nhq7"
                                  flex="1"
                                >
                                  <div
                                    className="css-z8nhq7"
                                    is={null}
                                  >
                                    <InputColumn>
                                      <Flex
                                        flex="1"
                                        justify="center"
                                      >
                                        <Base
                                          className="css-k3hlac"
                                          flex="1"
                                          justify="center"
                                        >
                                          <div
                                            className="css-k3hlac"
                                            is={null}
                                          >
                                            My Default
                                          </div>
                                        </Base>
                                      </Flex>
                                    </InputColumn>
                                    <InputColumn>
                                      <Flex
                                        flex="1"
                                        justify="center"
                                      >
                                        <Base
                                          className="css-k3hlac"
                                          flex="1"
                                          justify="center"
                                        >
                                          <div
                                            className="css-k3hlac"
                                            is={null}
                                          >
                                            Team Default
                                          </div>
                                        </Base>
                                      </Flex>
                                    </InputColumn>
                                    <InputColumn>
                                      <Flex
                                        flex="1"
                                        justify="center"
                                      >
                                        <Base
                                          className="css-k3hlac"
                                          flex="1"
                                          justify="center"
                                        >
                                          <div
                                            className="css-k3hlac"
                                            is={null}
                                          >
                                            Remove
                                          </div>
                                        </Base>
                                      </Flex>
                                    </InputColumn>
                                  </div>
                                </Base>
                              </Flex>
                            </div>
                          </Base>
                        </Flex>
                      </div>
                    </Base>
                  </Flex>
                </Component>
              </PanelHeader>
              <PanelBody
                direction="column"
                disablePadding={true}
                flex={false}
              >
                <div
                  className="css-9vq8an-textStyles"
                >
                  <EmptyStateWarning>
                    <EmptyStreamWrapper
                      className="ref-empty-state"
                    >
                      <div
                        className="ref-empty-state css-n38n5f-EmptyStreamWrapper ernlsnc0"
                      >
                        <Icon
                          className="icon icon-exclamation"
                        >
                          <div
                            className="icon icon-exclamation css-tjp7mx-Icon ernlsnc1"
                          />
                        </Icon>
                        <p>
                          There are no saved searches for this project.
                        </p>
                      </div>
                    </EmptyStreamWrapper>
                  </EmptyStateWarning>
                </div>
              </PanelBody>
            </div>
          </Component>
        </Panel>
      </div>
    </DocumentTitle>
  </SideEffect(DocumentTitle)>
</ProjectSavedSearches>
`;
